--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1713,4 +1713,65 @@
   volume={TR96}
 }
 
+@article{McCulloch1990ALC,
+  title={A logical calculus of the ideas immanent in nervous activity},
+  author={Warren S. McCulloch and Walter H. Pitts},
+  journal={Bulletin of Mathematical Biology},
+  year={1990},
+  volume={52},
+  pages={99-115}
+}
 
+@article{Kotseruba201840YO,
+  title={40 years of cognitive architectures: core cognitive abilities and practical applications},
+  author={Iuliia Kotseruba and John K. Tsotsos},
+  journal={Artificial Intelligence Review},
+  year={2018},
+  volume={53},
+  pages={17-94}
+}
+
+@inproceedings{Gardener1970MathematicalGT,
+  title={Mathematical games: the fantastic combinations of john conway's new solitaire game "life},
+  author={Master Gardener},
+  year={1970}
+}
+
+
+@article{alecu_can_2011,
+	title = {Can {Self}-{Organization} {Emerge} through {Dynamic} {Neural} {Fields} {Computation}?},
+	language = {en},
+	journal = {Connection Science},
+  year = {2011},
+	author = {Alecu, Lucian and Frezza-Buet, Hervé and Alexandre, Frédéric},
+	}
+
+@article{Nakagaki2000IntelligenceMB,
+  title={Intelligence: Maze-solving by an amoeboid organism},
+  author={Toshiyuki Nakagaki and Hiroyasu Yamada and {\'A}gota T{\'o}th},
+  journal={Nature},
+  year={2000},
+  volume={407},
+  pages={470-470}
+}
+
+
+@article{jackson_communication_2006,
+	title = {Communication in ants},
+	volume = {16},
+	issn = {0960-9822},
+	doi = {https://doi.org/10.1016/j.cub.2006.07.015},
+	number = {15},
+	journal = {Current Biology},
+	author = {Jackson, Duncan E. and Ratnieks, Francis L. W.},
+	year = {2006}
+}
+
+@article{Schuman2022OpportunitiesFN,
+  title={Opportunities for neuromorphic computing algorithms and applications},
+  author={Catherine D. Schuman and Shruti R. Kulkarni and Maryam Parsa and J. Parker Mitchell and Prasanna Date and Bill Kay},
+  journal={Nature Computational Science},
+  year={2022},
+  volume={2},
+  pages={10 - 19}
+}
